<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_securitycodenote"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:gravity="center"/>
    <TextView
        android:layout_margin="20dp"
        android:id="@+id/tv_usertel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/tv_code"/>
        <EditText
            android:layout_marginLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_code"
            android:textSize="15sp"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:phoneNumber="true"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_divide1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>
    <Button
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_againgetcode"
        android:background="@color/lucency"/>

</LinearLayout>
