<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="#5fccffff">


    <EditText

        android:layout_marginTop="100dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:id="@+id/et_registername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/et_hint_registername"
        android:textCursorDrawable="@null"
        android:singleLine="true"
        android:textSize="10sp"
        android:background="@drawable/shape"/>

    <EditText

        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:id="@+id/et_registertel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/et_hint_registertel"
        android:textCursorDrawable="@null"
        android:singleLine="true"
        android:maxLength="11"
        android:phoneNumber="true"
        android:textSize="10sp"
        android:background="@drawable/shape"/>

    <EditText

        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:id="@+id/et_registerpassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/et_hint_registerpassword"
        android:textCursorDrawable="@null"
        android:singleLine="true"
        android:textSize="10sp"
        android:background="@drawable/shape"/>


    <Button
        android:id="@+id/btn_register"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btn_register"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:background="@drawable/myshape" />


</LinearLayout>