<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="64dp"
    android:orientation="vertical"
    tools:context="com.appgather.activity.FindPassword">
    <TextView
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sendpassword"
        android:textSize="20sp"
        android:textColor="@color/blue"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_find_phonenumber"
            android:textSize="18sp"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:phoneNumber="true"
            android:maxLength="11"
            android:background="@null"
            android:textSize="18sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"/>
    <Button
        android:id="@+id/btn_sendpassword"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/btn_affirmsendpassword"
        android:background="@drawable/myshape"/>

</LinearLayout>
